2008-05-12  Jean-Louis Martineau <martineau@zmanda.com>
	  Patch by Orion Poplawski
	* server-src/planner.c: Warn about overwrite of last level 1, and
	  force backup of level 1 if overwrite on this run.

2008-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/deb/buildpkg packaging/rpm/buildpkg: AMVER=amanda-2.6.0p1
	* packaging/deb/changelog: amanda (2.6.0p1-1)
	* packaging/deb/rules: AMVER=2.6.0p1
	* packaging/rpm/amanda.spec: amanda_version 2.6.0p1, amanda_release 1
	* NEWS: Update for 2.6.0p1
	* configure.in: AM_INIT_AUTOMAKE(amanda, "2.6.0p1")

2008-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Define default tapetype.

2008-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Check the tapetype is defined.

2008-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c: Allow user to set "read_buffer_size"
	                            property.
	* restore-src/amrestore.c: Don't limit blocksize to
	                           --with-maxtapeblocksize.
	* common-src/conffile.c: Increase readblocksize to blocksize.
	  blocksize and readblocksize can be bigger than
	  --with-maxtapeblocksize.

2008-05-02 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec:  Replace ${ with %{ where applicable.

2008-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Typo.

2008-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Always sent a FAILED to taper if dumper failed.

2008-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Fix vstrextend use.

2008-04-16  Dan Locks <dwlocks@zmanda.com>
	* Fixes to debian package reported by daniel_P
	* packaging/deb/preinst: remove spaces near ${amanda_group}
	* packaging/deb/amanda-backup-server.dirs
	  packaging/deb/amanda-backup-client.dirs: added var/amanda and
	  usr/share/lintian/overrides
	* packaging/deb/rules: added logic to find PERLSITELIB and append that